tests/fixtures/app/examples/fail_InvalidOk.stderr
error: Termination requires the Ok variant to store a single value implementing `Termination`
  --> tests/fixtures/app/examples/fail_InvalidOk.rs:12:17
   |
12 | #[derive(Debug, Termination)]
   |                 ^^^^^^^^^^^
   |
help: add `(T)` after this
  --> tests/fixtures/app/examples/fail_InvalidOk.rs:15:5
   |
15 |     Ok = 0,
   |     ^^
   = note: this error originates in the derive macro `Termination` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Termination requires the Ok variant to store a single unnamed value implementing `Termination`
  --> tests/fixtures/app/examples/fail_InvalidOk.rs:19:17
   |
19 | #[derive(Debug, Termination)]
   |                 ^^^^^^^^^^^
   |
help: change this to `(T)`
  --> tests/fixtures/app/examples/fail_InvalidOk.rs:22:8
   |
22 |     Ok { outcome: T } = 0,
   |        ^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `Termination` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Termination requires the Ok variant to store a single unnamed value implementing `Termination`
  --> tests/fixtures/app/examples/fail_InvalidOk.rs:26:17
   |
26 | #[derive(Debug, Termination)]
   |                 ^^^^^^^^^^^
   |
help: change this to `(T)`
  --> tests/fixtures/app/examples/fail_InvalidOk.rs:29:7
   |
29 |     Ok(T, u8) = 0,
   |       ^^^^^^^
   = note: this error originates in the derive macro `Termination` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Termination requires an explicit success variant
  --> tests/fixtures/app/examples/fail_InvalidOk.rs:33:17
   |
33 | #[derive(Debug, Termination)]
   |                 ^^^^^^^^^^^
   |
help: Did you forget to add a success variant here ...
  --> tests/fixtures/app/examples/fail_InvalidOk.rs:35:1
   |
35 | / enum NotExitCodeZero<T: _T> {
36 | |     Ok(T) = 1,
   | |_____________^
help: ...or should this be 0?
  --> tests/fixtures/app/examples/fail_InvalidOk.rs:36:13
   |
36 |     Ok(T) = 1,
   |             ^
   = note: this error originates in the derive macro `Termination` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `fail` in this scope
  --> tests/fixtures/app/examples/fail_InvalidOk.rs:41:5
   |
41 |     fail
   |     ^^^^ not found in this scope

error[E0599]: no method named `report` found for type parameter `T` in the current scope
 --> tests/fixtures/app/examples/fail_InvalidOk.rs:5:17
  |
5 | #[derive(Debug, Termination)]
  |                 ^^^^^^^^^^^ method not found in `T`
6 | #[repr(u8)]
7 | enum NotTermination<T> {
  |                     - method `report` not found for this type parameter
  |
  = help: items from traits can only be used if the type parameter is bounded by the trait
  = note: this error originates in the derive macro `Termination` (in Nightly builds, run with -Z macro-backtrace for more info)
help: the following trait defines an item `report`, perhaps you need to restrict type parameter `T` with it:
  |
7 | enum NotTermination<T: Termination> {
  |                      +++++++++++++
